--- a/bin-release/AnotherUploadify.html
+++ b/bin-release/AnotherUploadify.html
@@ -234,7 +234,7 @@
             var params = {};
             params.quality = "high";
             params.bgcolor = "#ffffff";
-            params.allowscriptaccess = "sameDomain";
+            params.allowscriptaccess = "always";
             params.allowfullscreen = "true";
             var attributes = {};
             attributes.id = "AnotherUploadify";
